--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/edit-inventory/edit-inventory.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/edit-inventory/edit-inventory.component.html
@@ -63,7 +63,7 @@
                     <label>Choose File</label>
                 </div>
                 <div class="col-12 col-md-8 mb-3 file-upload-container">
-                    <input type="file" (change)="onFileSelected($event)" />
+                    <input type="file" (change)="onFileSelected($event)" accept=".xls,.xlsx,.csv"/>
                 </div>
             </div>
         </div>
