--- a/src/app/admin/features/inventory_role/license/license.component.html
+++ b/src/app/admin/features/inventory_role/license/license.component.html
@@ -1,6 +1,6 @@
 
 <div class="card">
-    <h5>R-SMS LICENSE EXTEND </h5>
+    <h5>RSMS LICENSE EXTEND </h5>
     <div class="row d-flex justify-content-center align-items-center  ">
         <div class="col-12 col-sm-12 col-md-12  mb-3">
             <!-- <div class="d-flex justify-content-end align-items-center mb-3">
