--- a/src/app/admin/features/nav/nav.component.html
+++ b/src/app/admin/features/nav/nav.component.html
@@ -47,7 +47,7 @@
         </li>
         <li *ngIf="isInventory">
             <a (click)="setActiveLinkListTab($event); navgetToUrl('/inventory_license')" class="nav-link">
-                <mat-icon class="icon">event_busy</mat-icon> &nbsp;License Expired
+                <mat-icon class="icon">event_busy</mat-icon> &nbsp;License Extend
             </a>
         </li>
         <li *ngIf="isInventory">
