--- a/src/app/admin/features/inventory_role/Dialogue/licenseexpire/licenseexpire.component.scss
+++ b/src/app/admin/features/inventory_role/Dialogue/licenseexpire/licenseexpire.component.scss
@@ -1,4 +1,13 @@
-// -----------------------Login Form----------------------------------
+.login-page{
+    display: flex;
+    top: 10;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: end;
+    align-items: center;
+}
+
 ::selection {
     background-color: gray;
 }
@@ -24,7 +33,6 @@
     color: white;
     margin: 1rem 0;
     font-size: 1.5rem;
-    text-transform: uppercase;
 }
 
 .input {
@@ -62,14 +70,3 @@
     background-color: rgb(248, 248, 247);
     box-shadow: none;
 }
-
-
-
-
-
-
-
-
-
-
-// -----------------------------------------------------------------------------
